[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Attacks/Fireball.gd" type="Script" id=1]
[ext_resource path="res://Assets/Audio/PlayerAudio/fireball_throw.wav" type="AudioStream" id=2]
[ext_resource path="res://Assets/Audio/PlayerAudio/out_of_mana.wav" type="AudioStream" id=3]
[ext_resource path="res://Assets/SystemScripts/Actions/BasicAttack.gd" type="Script" id=4]
[ext_resource path="res://Assets/Audio/PlayerAudio/miss_basic_attack.wav" type="AudioStream" id=5]
[ext_resource path="res://Assets/SystemScripts/Actions/Actions.gd" type="Script" id=6]
[ext_resource path="res://Assets/SystemScripts/Actions/Move.gd" type="Script" id=7]

[node name="Actions" type="Node"]
script = ExtResource( 6 )

[node name="Attacks" type="Node" parent="."]

[node name="Fireball" type="Node" parent="Attacks"]
script = ExtResource( 1 )

[node name="use" type="AudioStreamPlayer3D" parent="Attacks/Fireball"]
stream = ExtResource( 2 )
unit_db = 80.0
__meta__ = {
"_editor_description_": ""
}

[node name="out_of_mana" type="AudioStreamPlayer3D" parent="Attacks/Fireball"]
stream = ExtResource( 3 )
unit_db = 80.0

[node name="BasicAttack" type="Node" parent="Attacks"]
script = ExtResource( 4 )

[node name="use" type="AudioStreamPlayer3D" parent="Attacks/BasicAttack"]
stream = ExtResource( 5 )
unit_db = 80.0

[node name="out_of_mana" type="AudioStreamPlayer3D" parent="Attacks/BasicAttack"]
stream = ExtResource( 3 )
unit_db = 80.0

[node name="Movement" type="Node" parent="."]

[node name="Move" type="Node" parent="Movement"]
script = ExtResource( 7 )

[connection signal="mover_check_move_action" from="." to="Movement/Move" method="_on_Actions_mover_check_move_action"]
[connection signal="mover_move_actor" from="." to="Movement/Move" method="_on_Actions_mover_move_actor"]
[connection signal="mover_reset_pos_vars" from="." to="Movement/Move" method="_on_Actions_mover_reset_pos_vars"]
[connection signal="mover_set_actor" from="." to="Movement/Move" method="_on_Actions_mover_set_actor"]
[connection signal="mover_set_actor_direction" from="." to="Movement/Move" method="_on_Actions_mover_set_actor_direction"]
[connection signal="mover_set_actor_translation" from="." to="Movement/Move" method="_on_Actions_mover_set_actor_translation"]
[connection signal="spell_cast_basic_attack" from="." to="Attacks/BasicAttack" method="_on_Actions_spell_cast_basic_attack"]
[connection signal="spell_cast_fireball" from="." to="Attacks/Fireball" method="_on_Actions_spell_cast_fireball"]
